--- a/css/styles.css
+++ b/css/styles.css
@@ -1,229 +1,362 @@
 :root {
-    --primery-text-color: #212121;
-    --secondary-text-color: #757575;
-    --accent-color: #2196F3;
-    --main-background-color: #fff;
-    --secondary-background-color: #2F303A;
+  --primery-text-color: #212121;
+  --secondary-text-color: #757575;
+  --accent-color: #2196f3;
+  --main-background-color: #fff;
+  --secondary-background-color: #2f303a;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  list-style: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
-    letter-spacing: 0.03em;
-    color: var(--primery-text-color);
+  font-family: "Roboto", sans-serif;
+  letter-spacing: 0.03em;
+  color: var(--primery-text-color);
 }
 
-/* Removes periods from list items */
-.list {
-    list-style: none;
+.container {
+  width: 1200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin: 0 auto;
+
+  /* outline: 2px solid tomato; */
+}
+
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  /* outline: 2px solid green; */
 }
 
 /* Heder styles */
 .header {
-    background-color: var(--main-background-color);
+  background-color: var(--main-background-color);
+}
+
+.header-flex-container {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #ececec;
 }
 
 /* Heder-logo styles */
 .header-logo {
-    Font-family: Raleway;
-    font-weight: 700;
-    Font-size: 26px;
-    line-height: 1.19;
-    text-decoration: none;
+  margin-right: 93px;
+
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+  text-decoration: none;
 }
 
 .header-logo-text-web {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .header-logo-text-studio {
-    color: #000;
+  color: #000;
 }
 
 /* Navigation menu style */
 
-
-.navigation-item {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--primery-text-color);
-    text-decoration: none;
+.navigation-items {
+  display: flex;
 }
 
-.navigation-item:hover,
-.navigation-item:focus {
-    color: var(--accent-color);
+.navigation-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.navigation-item-link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primery-text-color);
+  text-decoration: none;
+}
+
+.navigation-item-link:hover,
+.navigation-item-link:focus {
+  color: var(--accent-color);
 }
 
 .active-page {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--accent-color);
-    text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+  text-decoration: none;
 }
 
 /* Contacts in header styles */
 
-
-.contact-header {
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--secondary-text-color);
-    text-decoration: none;
+.header-contacts {
+  display: flex;
+  margin-left: auto;
 }
 
-.contact-header:hover,
-.contact-header:focus {
-    color: var(--accent-color);
+.header-contact {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--secondary-text-color);
+  text-decoration: none;
+}
+
+.header-contact-item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.header-contact:hover,
+.header-contact:focus {
+  color: var(--accent-color);
 }
 
 /* Maine styles */
 
-/* Section het style */
+/* Section hero style */
 
-.section-hat {
-    background-color: var(--secondary-background-color);
+.hero {
+  padding-top: 200px;
+  padding-bottom: 200px;
+
+  background-color: var(--secondary-background-color);
 }
 
-.title {
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    text-align: center;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: #FFFFFF;
-} 
+.hero-title {
+  min-height: 120px;
+  width: 696px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 30px;
 
-.button {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: #FFFFFF;
-    background-color: var(--accent-color);
-    cursor: pointer;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  text-align: center;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+  color: #ffffff;
+}
+
+.hero-button {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+
+  padding-top: 10px;
+  padding-right: 32px;
+  padding-bottom: 10px;
+  padding-left: 32px;
+  min-width: 216px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+
+  background-color: var(--accent-color);
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+}
+
+.button:hover {
+  background-color: #188ce8;
 }
 
 /* Section futures styles */
 
-.feature-title {
-    font-size: 14px;
-    line-height: 1.14;
-    text-transform: uppercase;
+.features-items {
+  display: flex;
+  gap: 30px;
 }
 
-
 .feature-item {
-    font-size: 14px;
-    line-height: 1.71;
-    color: var(--secondary-text-color);
+  width: 270px;
+}
+
+.feature-title {
+  margin-bottom: 10px;
+
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+}
+
+.features-description {
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--secondary-text-color);
 }
 
 /* Section work styles */
 
-.work-title {
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
+.work {
+  padding-top: 0;
 }
 
+.work-title {
+  margin-bottom: 50px;
+
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+
+.work-items {
+  display: flex;
+  gap: 30px;
+}
+
+.work-item-img {
+  display: block;
+}
 
 /* Section team styles */
 
 .team {
-    background-color: #F5F4FA;
+  background-color: #f5f4fa;
+}
+
+.team-title {
+  margin-bottom: 50px;
+
+  font-size: 36px;
+  line-height: 1.16;
+  text-align: center;
+}
+
+.team-items {
+  display: flex;
+  gap: 30px;
 }
 
 .team-item {
-    background-color: var(--main-background-color);
-}
-.team-title {
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
+  background-color: var(--main-background-color);
 }
 
+.team-item-img {
+  display: block;
+  margin-bottom: 30px;
+}
 
 /* Cards with photos, names and titles of professions */
 
 .name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
+  margin-bottom: 10px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
 }
 
 .position {
-    font-size: 16px;
-    line-height: 1.19;
-    text-align: center;
-    color: var(--secondary-text-color);
-}
+  margin-bottom: 30px;
 
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: var(--secondary-text-color);
+}
 
 /* Footer styles */
 
 .footer {
-    background-color: var(--secondary-background-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--secondary-background-color);
 }
 
 /* Footer logo */
 
 .footer-logo {
-    text-decoration: none;
+  display: block;
+  margin-bottom: 20px;
+
+  text-decoration: none;
 }
 
 .footer-logo-text-web,
 .footer-logo-text-studio {
-    font-family: 'Raleway';
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
+  font-family: "Raleway";
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
 }
 
 .footer-logo-text-web {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .footer-logo-text-studio {
-    color: #fff;
+  color: #fff;
 }
 
 /* Footer adress */
 
+.adress-item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .company-address {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.17;
-    color: #FFFFFF;
-    text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.17;
+  color: #ffffff;
+  text-decoration: none;
 }
 
 .company-address:hover,
 .company-address:focus {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .contact-footer {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.17;
-    color: rgba(255, 255, 255, 0.6);
-    text-decoration: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.17;
+  color: rgba(255, 255, 255, 0.6);
+  text-decoration: none;
 }
 
 .contact-footer:hover,
 .contact-footer:focus {
-    color:var(--accent-color);
+  color: var(--accent-color);
 }
 
 /* Portfolio page */
@@ -232,40 +365,74 @@ body {
 
 /* Filters */
 
+.filter-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 50px;
+}
+
 .filter-button {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.16;
-    text-align: center;
-    cursor: pointer;
-    background-color: #F5F4FA;
+  padding-top: 6px;
+  padding-right: 22px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.16;
+  text-align: center;
+  cursor: pointer;
+
+  background-color: #f5f4fa;
+  border: none;
+  border-radius: 4px;
 }
 
 .filter-button:hover {
-    color: #fff;
-    background-color: var(--accent-color);
+  color: #fff;
+  background-color: var(--accent-color);
 }
 
 /* Projects */
 
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+
 .project {
-    background-color:var(--main-background-color);
+  background-color: var(--main-background-color);
 }
 
 .project-link {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+.project-link-img {
+  display: block;
+}
+
+.project-description {
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
+  padding-bottom: 20px;
+
+  border: 1px solid #eeeeee;
+  border-top: none;
 }
 
 .project-title {
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-    color: var(--primery-text-color);
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: var(--primery-text-color);
 }
 
 .project-type {
-    font-size: 16px;
-    line-height: 1.88;
-    color: var(--secondary-text-color);
+  font-size: 16px;
+  line-height: 1.88;
+  color: var(--secondary-text-color);
 }
-
